<resources>
    <string name="app_name">ConversationAnalysis</string>
    <string name="contact">Contact Us</string>
    <string name="error_recording">Recording discarded</string>
    <string name="record_toast">Begin recording</string> <!-- This is a temporary string until we implement recording. -->
    <string name="contact_email">Donna and Bob\nplaceholder@domain.edu</string> <!-- the email is a placeholder value, for now. -->
    <string name="nav_record_title">Record Data</string>
    <string name="nav_view_title">View Data</string>
    <string name="open_nav_drawer">Navigation Drawer Open</string>
    <string name="close_nav_drawer">Navigation Drawer Closed</string>
    <string name="error_processing">This conversation could not be processed. Try again.</string>
    <string name="successful">Data collection successful</string>
    <string name="audio_deleted">(audio recording was deleted)</string>
    <string name="send_data">Send data for research?</string>
    <string name="send_button">Send</string>
    <string name="cancel_button">Cancel</string>
    <string name="upload_success">Successfully uploaded conversation.</string>
    <string name="upload_failure">Upload failed. Try again later.</string>
    <string name="delete_button_caption">Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete this conversation?</string>
    <string name="confirm">Yes</string>
    <string name="deny">No</string>
</resources>
